--- a/upstream/composer.json
+++ b/upstream/composer.json
@@ -23,7 +23,8 @@
         "drush-ops/behat-drush-endpoint": "^9.3",
         "rvtraveller/qs-composer-installer": "^1.1",
         "zaporylie/composer-drupal-optimizations": "^1.0",
-        "drupal/pathauto": "^1.6"
+        "drupal/pathauto": "^1.6",
+        "drupal/redirect": "1.5"
     },
     "require-dev": {
         "behat/behat": "3.*",
