--- a/upstream/composer.json
+++ b/upstream/composer.json
@@ -24,7 +24,7 @@
         "rvtraveller/qs-composer-installer": "^1.1",
         "zaporylie/composer-drupal-optimizations": "^1.0",
         "drupal/pathauto": "^1.6",
-        "drupal/redirect": "^1.4"
+        "drupal/redirect": "1.4"
     },
     "require-dev": {
         "behat/behat": "3.*",
